--- a/_includes/shared/footer.html
+++ b/_includes/shared/footer.html
@@ -13,7 +13,7 @@
           <li><a href="{{ site.url }}/products/passion">百香果汁</a></li>
         </ul>
         <ul>
-          <li><a href="{{ site.url }}/products/starfruit">楊桃汁</a></li>
+          <!-- <li><a href="{{ site.url }}/products/starfruit">楊桃汁</a></li> -->
           <li><a href="{{ site.url }}/products/dongua">冬瓜茶</a></li>
           <li><a href="{{ site.url }}/products/herb">青草茶</a></li>
           <li><a href="{{ site.url }}/products/herb">苦茶</a></li>
