--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -10,7 +10,7 @@ layout: base
     <li><a href="/products/honeylemon"><img alt="Honeylemon" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/honeylemon.png"></a></li>
     <li><a href="/products/lemon"><img alt="Lemon" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/lemon.png"></a></li>
     <li><a href="/products/passion"><img alt="Passion" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/passion.png"></a></li>
-    <li><a href="/products/starfruit"><img alt="Starfruit" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/starfruit.png"></a></li>
+    <!-- <li><a href="/products/starfruit"><img alt="Starfruit" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/starfruit.png"></a></li> -->
     <li><a href="/products/dongua"><img alt="Dongua" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/dongua.png"></a></li>
     <li><a href="/products/herb"><img alt="Herb" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/herb.png"></a></li>
     <li><a href="/products/herb"><img alt="Bitter" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/album/portrait/bitter.png"></a></li>
