--- a/_includes/products.html
+++ b/_includes/products.html
@@ -15,9 +15,9 @@
         <li><a href="/products/passion">
           <img src="{{ site.url }}/assets/img/album/portrait/passion.png"></a>
         </li>
-        <li><a href="/products/starfruit">
+        <!-- <li><a href="/products/starfruit">
           <img src="{{ site.url }}/assets/img/album/portrait/starfruit.png"></a>
-        </li>
+        </li> -->
         <li><a href="/products/dongua">
           <img src="{{ site.url }}/assets/img/album/portrait/dongua.png"></a>
         </li>
